# so101arm-mcp

./: .envsample  .gitignore  README.md  pyproject.toml  requirements.txt  saved_positions.json  server.py  test_robot.py
